--- a/202580006.html
+++ b/202580006.html
@@ -147,7 +147,7 @@
                             <p class="text-sm text-gray-500 mb-3">2024.08 - 2024.11 | Full Stack</p>
                             <p class="mb-3">
                                 <span class="font-semibold text-custom-primary">핵심 기여:</span> 
-                                이 프로젝트에서는 명확한 UI 마크다운 지침(Vibrant Pink, Corporate 폰트, Minimal Flat)을 기반으로 전체 디자인 시스템을 구축하고 Next.js 환경에서 컴포넌트 라이브러리를 개발했습니다.
+                                이 프로젝트에서는 명확한 UI 마크다운 지침을 기반으로 전체 디자인 시스템을 구축하고 Next.js 환경에서 컴포넌트 라이브러리를 개발했습니다.
                                 특히, <span class="text-custom-accent font-semibold">Smooth Slide 인터랙션</span>을 모든 UI 요소에 적용하여 높은 사용자 만족도를 달성했습니다.
                             </p>
                             <a href="#" class="inline-block px-3 py-1 text-sm bg-custom-primary text-white rounded-full transition duration-300 ease-in-out hover:bg-custom-secondary">
@@ -203,4 +203,5 @@
         </footer>
     </div>
 </body>
+
 </html>
