--- a/202580006.html
+++ b/202580006.html
@@ -159,7 +159,7 @@
                             <h3 class="text-xl font-bold text-custom-gray-900 mb-1">
                                @@
                             </h3>
-                            <p class="text-sm text-gray-500 mb-3">2024.05 - 2024.07 | Frontend</p>
+                            <p class="text-sm text-gray-500 mb-3">2025. 09 ~ | Frontend</p>
                             <p class="mb-3">
                                 <span class="font-semibold text-custom-primary">핵심 기여:</span> 
                                 데스크톱 화면에서 최적의 레이아웃과 기능을 제공하는 것을 목표로 설계한 개인 포트폴리오 사이트입니다. 
@@ -204,4 +204,5 @@
 </body>
 
 </html>
+
 
