Fix HTML formatting and add new sections

--- a/202580006.html
+++ b/202580006.html
@@ -99,7 +99,7 @@
                         </div>
                         <div class="w-full md:w-2/3">
                             <p class="mb-4">
-                                저는 경험을 최우선으로 생각하며, 'Desktop First' 반응형 전략에 맞춰 견고하고 효율적인 웹 애플리케이션을 개발하는 프론트엔드 개발자입니다. 특히, <span class="font-bold text-custom-primary">Vibrant Pink 컬러 시스템</span>과 같은 명확한 디자인 지침을 코드로 구현하는 데 능숙합니다.
+                                저는 경험을 최우선으로 생각하며, 전략에 맞춰 견고하고 효율적인 웹 애플리케이션을 개발하는 프론트엔드 개발자입니다. 특히, <span class="font-bold text-custom-primary">Vibrant Pink 컬러 시스템</span>과 같은 명확한 디자인 지침을 코드로 구현하는 데 능숙합니다.
                             </p>
                             <div class="space-y-2">
                                 <p><span class="font-semibold">이메일:</span> olxoeee@hs.ac.kr</p>
@@ -204,6 +204,7 @@
 </body>
 
 </html>
+
 
 
 
